exercises/mtls/httpbin-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-demo
---
apiVersion: v1
kind: Service
metadata:
  name: confidential-service
  namespace: httpbin-demo
  annotations:
    konghq.com/path: "/uuid"
spec:
  type: ExternalName
  externalName: httpbin.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: public-service
  namespace: httpbin-demo
  annotations:
    konghq.com/path: "/ip"
spec:
  type: ExternalName
  externalName: httpbin.default.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-route
  namespace: httpbin-demo
  annotations: 
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /public
        pathType: ImplementationSpecific
        backend:
          service:
            name: public-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confidential-route
  namespace: httpbin-demo
  annotations: 
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /confidential
        pathType: ImplementationSpecific
        backend:
          service:
            name: confidential-service
            port:
              number: 80
